# VideoRecommendation

./: README.md  docker-compose.yml  flake.nix  lazy-lock.json  main.py
AI/: README.md  getData.py  main.py  requirements.txt  test.py
Backend/: CMakeLists.txt  Dockerfile  main.cc
Frontend/: angular.json  package.json
Frontend/src/app/: app.component.html
desktop/: configuration.nix  hardware-configuration.nix
hosts/desktop/: configuration.nix  hardware-configuration.nix  home.nix
hosts/notebook/: home.nix
lua/config/: init.lua  keymaps.lua
models/: model_BR.pth  model_GB.pth
modules/nvim/: lazy-lock.json
modules/nvim/lua/config/: lazy.lua
sxhkd/: sxhkdrc
